test/tasty/neg/src-2/TestHKNest5_fail.scala
package tastytest

import HKNest._

object TestHKNest {
  trait Show[-T]
  def test4 = new HKClass_4[Show]
  def test5 = new HKClass_5[List]
}
